opam-version: "2.0"
maintainer: "Hyper Systems Ltd <admin@hyper.ag>"
authors: "Hyper Systems Ltd <admin@hyper.ag>"
homepage: "https://hyper.ag"
bug-reports: "https://github.com/hyper-systems/edge-server/issues"
synopsis: "Hyper web dashboard"

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {= "4.14.0"}
  "dune" {build}
  "reason" {build}

  "melange"
  "mel"

  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
]
pin-depends: [
  ["dune.dev" "git+https://github.com/ocaml/dune.git#28545f3f729d6b203bc3f4f5bd5bda5ba975bb3a"]
  ["melange.dev" "git+https://github.com/melange-re/melange.git#c4a7f654d9756b9ca7256d0ea279769c79c0bee7"]
  ["mel.dev" "git+https://github.com/melange-re/melange.git#c4a7f654d9756b9ca7256d0ea279769c79c0bee7"]
]
