opam-version: "2.0"
maintainer: "Hyper Systems Ltd <admin@hyper.ag>"
authors: "Hyper Systems Ltd <admin@hyper.ag>"
homepage: "https://hyper.ag"
bug-reports: "https://github.com/hyper-systems/edge-server/issues"
synopsis: "Hyper web dashboard"

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" { >= "4.14.0" & < "5.0.0"}
  "dune" {build}
  "reason" {build}
  "melange" {build}
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
  "reactjs-jsx-ppx" {build}
  "reason-react"
]
