opam-version: "2.0"

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" { >= "4.14.0" & < "5.0.0"}
  "reason-react"
  "dune" {build}
  "melange" {build}
  "reason" {build}
  "reactjs-jsx-ppx" {build}
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
]
depexts: [
  ["nodejs"] {os-distribution = "nixos" & with-dev-setup}
]
